fix: change Map.class to "new TypeReference<Map<String, String>>() {}" for generic